--- a/springboot-rest/pom.xml
+++ b/springboot-rest/pom.xml
@@ -31,8 +31,12 @@
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>1.2.0</version>
 		</dependency>
-
-
+		<!-- druid数据源 -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>1.1.10</version>
+		</dependency>
 
 	</dependencies>
 
