--- a/springboot-rest/src/main/resources/application.properties
+++ b/springboot-rest/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-spring.redis.host=127.0.0.1
-spring.redis.password=Redis!123
-spring.redis.port=6379
-#最大连接数,新版本已经取消
-#spring.redis.pool.max-active=8 
+#1.\u6570\u636e\u6e90\u914d\u7f6e
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/tale?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.datasource.initialSize=20
+spring.datasource.minIdle=10
+spring.datasource.maxActive=100
