--- a/springboot-rest/src/main/resources/application.properties
+++ b/springboot-rest/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.password=admin
 spring.datasource.initialSize=20
 spring.datasource.minIdle=10
 spring.datasource.maxActive=100
+
+#\u670d\u52a1\u7aef\u53e3\u53f7
+server.port=8688
