--- a/springboot-rest/pom.xml
+++ b/springboot-rest/pom.xml
@@ -37,7 +37,10 @@
 			<artifactId>druid</artifactId>
 			<version>1.1.10</version>
 		</dependency>
-
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
 	</dependencies>
 
 	<!-- Package as an executable jar -->
