--- a/springboot-rest/pom.xml
+++ b/springboot-rest/pom.xml
@@ -37,9 +37,21 @@
 			<artifactId>druid</artifactId>
 			<version>1.1.10</version>
 		</dependency>
+		<!-- mysql驱动 -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<!-- swagger -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.4.0</version>
 		</dependency>
 	</dependencies>
 
