--- a/springboot-rest/src/main/resources/application.properties
+++ b/springboot-rest/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#0.\u73af\u5883\u6807\u8bc6
+rest.env=dev
+
 #1.\u6570\u636e\u6e90\u914d\u7f6e
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
@@ -8,5 +11,9 @@ spring.datasource.initialSize=20
 spring.datasource.minIdle=10
 spring.datasource.maxActive=100
 
-#\u670d\u52a1\u7aef\u53e3\u53f7
+#2.\u670d\u52a1\u7aef\u53e3\u53f7
 server.port=8688
+
+#3.swagger\u914d\u7f6e
+rest.server.addr=127.0.0.1
+rest.server.port=8688
