--- a/springboot-rest/src/main/resources/application.properties
+++ b/springboot-rest/src/main/resources/application.properties
@@ -17,3 +17,8 @@ server.port=8688
 #3.swagger\u914d\u7f6e
 rest.server.addr=127.0.0.1
 rest.server.port=8688
+
+#4.redis
+spring.redis.host=127.0.0.1
+spring.redis.password=test123
+spring.redis.port=6379
