--- a/springboot-rest/pom.xml
+++ b/springboot-rest/pom.xml
@@ -53,6 +53,11 @@
 			<artifactId>springfox-swagger2</artifactId>
 			<version>2.4.0</version>
 		</dependency>
+		<!-- redis -->
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
 	</dependencies>
 
 	<!-- Package as an executable jar -->
