--- a/springboot-rest/src/main/resources/application.properties
+++ b/springboot-rest/src/main/resources/application.properties
@@ -18,7 +18,7 @@ server.port=8688
 rest.server.addr=127.0.0.1
 rest.server.port=8688
 
-#4.redis
+#4.redis\u914d\u7f6e
 spring.redis.host=127.0.0.1
 spring.redis.password=test123
 spring.redis.port=6379
