--- a/springboot-rest/pom.xml
+++ b/springboot-rest/pom.xml
@@ -63,7 +63,6 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.8.2</version>
 		</dependency>
 		<!-- fastjson -->
 		<!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
@@ -88,6 +87,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<executable>true</executable>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
