--- a/springboot-rest/src/main/resources/config/application-dev.properties
+++ b/springboot-rest/src/main/resources/config/application-dev.properties
@@ -37,3 +37,6 @@ spring.redis.pool.max-idle=100
 spring.redis.pool.min-idle=20
 ## \u8fde\u63a5\u8d85\u65f6\u65f6\u95f4\uff08\u6beb\u79d2\uff09 
 spring.redis.timeout=60000
+
+#6.\u914d\u7f6esession\u7684redis\u5171\u4eab
+spring.session.store-type=Redis
