--- a/springboot-rest/pom.xml
+++ b/springboot-rest/pom.xml
@@ -77,6 +77,11 @@
 			<artifactId>spring-boot-starter-log4j</artifactId>
 			<version>1.3.8.RELEASE</version>
 		</dependency>
+		<!-- session共享 -->
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-data-redis</artifactId>
+		</dependency>
 
 
 	</dependencies>
