--- a/springboot-rest/src/main/resources/config/application-test.properties
+++ b/springboot-rest/src/main/resources/config/application-test.properties
@@ -39,4 +39,7 @@ spring.redis.pool.min-idle=20
 spring.redis.timeout=60000
 
 #6.\u914d\u7f6esession\u7684redis\u5171\u4eab
-spring.session.store-type=Redis
+spring.session.store-type=redis
+#\u5b9e\u65f6\u540c\u6b65session \u6570\u636e\u5230redis. \u5f53\u6267\u884cSessionRepository.createSession()\u65f6, 
+#\u4f1a\u5c06session\u6570\u636e\u540c\u6b65\u5230redis\u4e2d; \u5f53\u5bf9session\u7684attribute\u8fdb\u884cset/remove \u7b49\u64cd\u4f5c\u65f6, \u4e5f\u4f1a\u540c\u6b65session\u4e2d\u7684\u6570\u636e\u5230redis\u4e2d.
+spring.session.redis.flushMode=IMMEDIATE
