--- a/springboot-rest/src/main/resources/config/application-dev.properties
+++ b/springboot-rest/src/main/resources/config/application-dev.properties
@@ -4,7 +4,7 @@ rest.env=dev
 #1.\u6570\u636e\u6e90\u914d\u7f6e
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/tale?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+spring.datasource.url=jdbc:mysql://localhost:3306/sprest?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.initialSize=20
