--- a/springboot-rest/src/main/resources/config/application-test.properties
+++ b/springboot-rest/src/main/resources/config/application-test.properties
@@ -45,3 +45,11 @@ spring.session.store-type=redis
 spring.session.redis.flushMode=IMMEDIATE
 #session\u6709\u6548\u65f6\u95f4300\u79d2
 server.session.timeout=300
+
+#7.\u5f02\u6b65\u7ebf\u7a0b\u6c60\u914d\u7f6e
+#\u6838\u5fc3\u7ebf\u7a0b\u6570
+sprest.async.corePoolSize=10
+#\u7ebf\u7a0b\u6c60\u6700\u5927\u7ebf\u7a0b\u6570
+sprest.async.maxPoolSize=30
+#\u7ebf\u7a0b\u961f\u5217\u6700\u5927\u7ebf\u7a0b\u6570
+sprest.async.queueCapacity=2000
