--- a/springboot-rest/src/main/resources/config/application-dev.properties
+++ b/springboot-rest/src/main/resources/config/application-dev.properties
@@ -53,3 +53,6 @@ sprest.async.corePoolSize=10
 sprest.async.maxPoolSize=30
 #\u7ebf\u7a0b\u961f\u5217\u6700\u5927\u7ebf\u7a0b\u6570
 sprest.async.queueCapacity=2000
+
+#8.zk\u96c6\u7fa4\u914d\u7f6e
+zk.cluster.addr=127.0.0.1:2181,127.0.0.1:2182,127.0.0.1:2183
