springboot-mybatis-thymeleaf框架搭建

--- a/springboot-rest/.classpath
+++ b/springboot-rest/.classpath
@@ -6,8 +6,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src/main/webapp/WEB-INF"/>
-	<classpathentry excluding="WEB-INF/" kind="src" path="src/main/webapp"/>
+	<classpathentry excluding="WEB-INF/|templates/|WEB-INF/templates/" kind="src" path="src/main/webapp"/>
 	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resources">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
