--- a/springboot-rest/src/main/resources/config/application-test.properties
+++ b/springboot-rest/src/main/resources/config/application-test.properties
@@ -17,3 +17,12 @@ server.port=8688
 #3.swagger\u914d\u7f6e
 rest.server.addr=127.0.0.1
 rest.server.port=8688
+
+# thymeleaf
+spring.thymeleaf.prefix=/WEB-INF/templates/
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.content-type=text/html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.cache=false
