--- a/springboot-rest/src/main/resources/config/application-dev.properties
+++ b/springboot-rest/src/main/resources/config/application-dev.properties
@@ -12,47 +12,13 @@ spring.datasource.minIdle=10
 spring.datasource.maxActive=100
 
 #2.\u670d\u52a1\u7aef\u53e3\u53f7
-server.port=8688
+server.port=8080
 
-#3.swagger\u914d\u7f6e
-rest.server.addr=127.0.0.1
-rest.server.port=8688
-
-#4.\u5355\u673aredis\u914d\u7f6e
-#spring.redis.host=127.0.0.1
-#spring.redis.password=test123
-#spring.redis.port=6379
-
-#5.redis\u96c6\u7fa4\u914d\u7f6e
-spring.redis.cluster.nodes=127.0.0.1:6380,127.0.0.1:6381,127.0.0.1:6382,127.0.0.1:6383,127.0.0.1:6384,127.0.0.1:6385
-## \u8fde\u63a5\u6c60\u6700\u5927\u8fde\u63a5\u6570\uff08\u4f7f\u7528\u8d1f\u503c\u8868\u793a\u6ca1\u6709\u9650\u5236\uff09 
-spring.redis.pool.max-active=300
-## Redis\u6570\u636e\u5e93\u7d22\u5f15(\u9ed8\u8ba4\u4e3a0) 
-spring.redis.database=0
-## \u8fde\u63a5\u6c60\u6700\u5927\u963b\u585e\u7b49\u5f85\u65f6\u95f4\uff08\u4f7f\u7528\u8d1f\u503c\u8868\u793a\u6ca1\u6709\u9650\u5236\uff09 
-spring.redis.pool.max-wait=-1
-## \u8fde\u63a5\u6c60\u4e2d\u7684\u6700\u5927\u7a7a\u95f2\u8fde\u63a5 
-spring.redis.pool.max-idle=100
-## \u8fde\u63a5\u6c60\u4e2d\u7684\u6700\u5c0f\u7a7a\u95f2\u8fde\u63a5 
-spring.redis.pool.min-idle=20
-## \u8fde\u63a5\u8d85\u65f6\u65f6\u95f4\uff08\u6beb\u79d2\uff09 
-spring.redis.timeout=60000
-
-#6.\u914d\u7f6esession\u7684redis\u5171\u4eab
-spring.session.store-type=redis
-#\u5b9e\u65f6\u540c\u6b65session \u6570\u636e\u5230redis. \u5f53\u6267\u884cSessionRepository.createSession()\u65f6, 
-#\u4f1a\u5c06session\u6570\u636e\u540c\u6b65\u5230redis\u4e2d; \u5f53\u5bf9session\u7684attribute\u8fdb\u884cset/remove \u7b49\u64cd\u4f5c\u65f6, \u4e5f\u4f1a\u540c\u6b65session\u4e2d\u7684\u6570\u636e\u5230redis\u4e2d.
-spring.session.redis.flushMode=IMMEDIATE
-#session\u6709\u6548\u65f6\u95f4300\u79d2
-server.session.timeout=300
-
-#7.\u5f02\u6b65\u7ebf\u7a0b\u6c60\u914d\u7f6e
-#\u6838\u5fc3\u7ebf\u7a0b\u6570
-sprest.async.corePoolSize=10
-#\u7ebf\u7a0b\u6c60\u6700\u5927\u7ebf\u7a0b\u6570
-sprest.async.maxPoolSize=30
-#\u7ebf\u7a0b\u961f\u5217\u6700\u5927\u7ebf\u7a0b\u6570
-sprest.async.queueCapacity=2000
-
-#8.zk\u96c6\u7fa4\u914d\u7f6e
-zk.cluster.addr=127.0.0.1:2181,127.0.0.1:2182,127.0.0.1:2183
+#3.thymeleaf
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.content-type=text/html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.cache=false
