--- a/springboot-rest/src/main/resources/config/application-dev.properties
+++ b/springboot-rest/src/main/resources/config/application-dev.properties
@@ -1,16 +1,24 @@
 #0.\u73af\u5883\u6807\u8bc6
 rest.env=dev
 
-#1.\u6570\u636e\u6e90\u914d\u7f6e
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/sprest?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
-spring.datasource.username=root
-spring.datasource.password=admin
-spring.datasource.initialSize=20
-spring.datasource.minIdle=10
-spring.datasource.maxActive=100
-
+#1.\u6570\u636e\u6e901\u914d\u7f6e
+default1.datasource.type=com.alibaba.druid.pool.DruidDataSource
+default1.datasource.driverClassName=com.mysql.jdbc.Driver
+default1.datasource.url=jdbc:mysql://localhost:3306/sprest1?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+default1.datasource.username=root
+default1.datasource.password=admin
+default1.datasource.initialSize=20
+default1.datasource.minIdle=10
+default1.datasource.maxActive=100
+#\u6570\u636e\u6e902\u914d\u7f6e
+default2.datasource.type=com.alibaba.druid.pool.DruidDataSource
+default2.datasource.driverClassName=com.mysql.jdbc.Driver
+default2.datasource.url=jdbc:mysql://localhost:3306/sprest2?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+default2.datasource.username=root
+default2.datasource.password=admin
+default2.datasource.initialSize=20
+default2.datasource.minIdle=10
+default2.datasource.maxActive=100
 #2.\u670d\u52a1\u7aef\u53e3\u53f7
 server.port=8080
 
